--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "rsuite": "^4.2.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
