--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "nodemon":"nodemon ./bin/www"
+    "nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.8",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "^4.1.0",
