--- a/Client/package.json
+++ b/Client/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "react-share": "^4.0.1",
     "rsuite": "^4.2.1",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
